--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,8 @@
 :root {
   --primary: #1aac83;
   --error: #e7195a;
+  --secondary: rgb(25, 143, 117);
+  --tertiary: rgb(13, 102, 77);
 }
 body {
   background: #f1f1f1;
@@ -88,6 +90,7 @@ form button {
   border-radius: 4px;
   cursor: pointer;
 }
+
 div.error {
   padding: 10px;
   background: #ffefef;
